<resources>
    <string name="app_name">Aktivpause to Go</string>
    <string name="app_name_short">Aktivpause</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="slide1_heading">Welcome to Aktivpause to Go!</string>
    <string name="slide1_text">This app reminds you to regularly take breaks during your work. Additionally, you can choose from a set of exercises, that can help you to spend your break more active. The exercises are currently only provided in german.</string>
    <string name="slide2_heading">Create Exercise Sets</string>
    <string name="slide2_text">
        First you specify, what type of exercise you want to complete.
        For that, you can create exercise sets, that contain a group of exercises.
        To create a new exercise set, tap the plus icon on the lower right.
        Then just specify a name for the set and tap "save".
    </string>
    <string name="slide3_heading">Add Exercises</string>
    <string name="slide3_text">With the edit button in the lower right you can add new exercises to a set by tapping the checkboxes below the pictures of the exercises. Every exercise is set to be done 30 seconds. This duration can be changed in the settings. You can also filter the exercise list using the filter buttons at the top.</string>
    <string name="slide4_heading">Choose Exercise Set</string>
    <string name="slide4_text">You can choose the exercise set you want to use during the breaks by tapping the little arrow icon in the top right corner. Select how long you want to work and how long your break should be. Start the timer by pressing the play button.</string>
    <string name="slide5_heading">Time For A Break</string>
    <string name="slide5_text">As soon as it\'s time for the break, the Pausing Healthily App will notify you. Tap the notification to start the break. You can see how much time is left for the break in the top left corner.</string>
    <string name="slide6_heading">Healthy Break</string>
    <string name="slide6_text">To start with the exercises, tap the play button. If you want to skip an exercise, press the skip button. With the back button you can repeat an exercise or go back to one you have already done. If you activate the clock within the circular arrow button, the exercises will start to run automatically after the previous is completed. Normally the exercises are shown until every exercise has been done once. By activating the repeat button on the right, the exercise set will be repeated until the break is over.</string>
    <string name="activity_edit_exercise_set_name_hint">Enter a name …</string>
    <string name="exercise_section_head">Head</string>
    <string name="exercise_section_neck">Neck</string>
    <string name="exercise_section_arms">Arms</string>
    <string name="exercise_section_torso">Torso</string>
    <string name="exercise_section_spinal">Spine</string>
    <string name="exercise_section_pelvis">Pelvis</string>
    <string name="exercise_section_legs">Legs</string>
    <string name="exercise_section_shoulder">Shoulder</string>
    <string name="exercise_section_back">Back</string>
    <string name="exercise_section_face">Face</string>
    <string name="exercise_section_body">Body</string>
    <string name="exercise_section_other">Other</string>
    <string name="activity_title_choose_exercises">Choose Exercises</string>
    <string name="activity_edit_no_empty_name">Please specify a name.</string>
    <string name="activity_title_help">Help</string>
    <string name="activity_title_about">About</string>
    <string name="dialog_leave_break_confirmation">Do you really want to cancel your break?</string>
    <string name="remaining_time">Time remaining:</string>
    <string name="activity_timer_choose_time">Select a work duration:</string>
    <string name="activity_timer_choose_break">Select a break duration:</string>
    <string name="toast_please_specify_a_name">Please specify a name.</string>
    <string name="toast_please_select_an_item_to_delete">Please select an item to delete.</string>
    <string name="dialog_end_break_confirmation">Do you want to go back to the main menu?</string>
    <string name="dialog_end_break_confirmation_title">Pause time is up!</string>
    <string name="execution">Execution</string>
    <string name="description">Description</string>
    <string name="set_contains_no_exercises">This set contains no exercises.</string>
    <string name="take_a_break_now">Take a break now! Click here to do your chosen exercises.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="no_exercise_sets">No exercise sets available. Please create a new one.</string>
    <string name="activity_title_manage_exercise_sets">Exercise Sets</string>
    <string name="activity_title_edit_exercise_set">Edit Exercise Set</string>
    <string name="dialog_add_exercise_set_title">Add New Exercise Set</string>
    <string name="dialog_add_exercise_set_name">Exercise Set Name</string>
    <string name="dialog_discard_confirmation">Are you sure you want to discard the changes?</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="pref_exercise_time">Exercise time (in Seconds)</string>
    <string name="pref_keep_screen_on_during_exercise">Keep screen on during exercise</string>
    <string name="pref_category_exercise">Exercise Settings</string>
    <string name="pref_category_schedule">schedule an exercise</string>
    <string name="pref_schedule_exercise_switch">Enable exercise schedule</string>
    <string name="pref_schedule_exercise_time">Schedule time</string>
    <string name="pref_header_schedule">Schedule Times</string>
    <string name="pref_header_exercises">Exercise Settings</string>
    <string name="pref_exercise_continuous">Continuous work intervals</string>
    <string name="pref_exercise_continuous_summary">Start the next work timer automatically</string>
    <string name="pref_schedule_exercise_days">Choose days</string>
    <string name="pref_schedule_exercise_daystrigger">Only trigger on certain days</string>
    <string name="pref_schedule_exercise_days_defaultsummary">No days selected.</string>
    <string name="pref_schedule_exercise_days_allselectedsummary">every day</string>
    <string name="about">About</string>
    <string name="app_name_long" translatable="false">Privacy Friendly Aktivpause to Go</string>
    <string name="version_number" translatable="false">Version</string>
    <string name="about_author">Authors: </string>
    <string name="about_author_names" translatable="false">Christopher Beckmann, Eduardo Fontao</string>
    <string name="about_author_contributors">%s and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="more_info">More Information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/Aktivpause">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by the Karlsruhe Institute of Technology (KIT). Sourcecode licensed under GPLv3. Images copyright KIT and Google Inc.</string>
    <string name="help_whatis">What is Privacy Friendly Pausing Healthily?</string>
    <string name="help_whatis_answer">Privacy Friendly Pausing Healthily is an app, that reminds you to take breaks during your work sessions. It allows you to select exercises, that are then shown during your break time.</string>
    <string name="help_select_exercises">How do I select exercises, so that I can execute them during the break?</string>
    <string name="help_select_exercises_answer">
        Exercises have to be added to an exercise set, to be selectable.
        As soon as you have created an exercise set, you can add new exercises by tapping \"Exercise Sets\" in the side menu and selecting the set you want to add exercises to.
        You can then add or remove exercises by pressing the edit icon in the lower right corner, then select the exercises you want.\n
    </string>
    <string name="help_create_sets">How do I create exercise sets?</string>
    <string name="help_create_sets_answer">
        To create an exercise set, select \"Exercise Sets\" in the side menu and tap the \"+\"-Icon in the lower right corner. After you have set a name, you can add exercises to the set.
    </string>
    <string name="help_permission">Which permissions does the app require?</string>
    <string name="help_permission_answer">
        The App needs three permissions.\n
        1. VIBRATE - to start an vibration alarm, when the break should start.\n
        2. WAKE_LOCK - to be able to set automatically starting timers.\n
        3. RECEIVE_BOOT_COMPLETED - to be able to set automatically starting timers after a reboot correctly.\n
        No further permissions are needed.
    </string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="dismiss_and_dont_repeat">Dismiss &amp; don\'t restart</string>
    <string name="snooze">Snooze</string>
    <string name="start_break">Start Break</string>
    <string name="okay">Okay</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="help">Help</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="keep_editing">keep editing</string>
    <string name="discard">discard</string>
    <string name="about_graphics_by">Graphics &amp; Descriptions:</string>
    <string name="about_graphics_names" translatable="false"><a href="https://www.sport.kit.edu/">KIT - Institut für Sport und Sportwissenschaft</a></string>
    <string name="set_default_1">Neck-Head</string>
    <string name="set_default_2">Shoulder and Arms</string>
    <string name="set_default_3">Back</string>
    <string name="set_default_4">Hips</string>
    <string name="set_default_5">Knee</string>
    <string name="pref_category_default_exercise_sets">Default Exercise Sets</string>
    <string name="pref_hide_default_exercise_sets">Hide default exercise sets</string>
    <string name="exercise_set_can_not_be_deleted">This set can not be deleted. These sets can be hidden via the settings page.</string>
    <string name="exercise_set_can_not_be_edited">This set can not be edited.</string>
    <string name="activity_exercise_button_prev">previous exercise</string>
    <string name="activity_exercise_button_next">next exercise</string>
    <string name="activity_exercise_button_repeat_on">repeat exercises</string>
    <string name="activity_exercise_button_repeat_off">repeat exercises off</string>
    <string name="activity_exercise_button_continuous_on">start timers automatically</string>
    <string name="activity_exercise_button_continuous_off">start timers manually</string>
    <string name="exercise_time">Execise Time: %s</string>
    <string name="dialog_warning_not_enough_exercise_time">The chosen exercise time is too short to finish the selected exercise set. The time will automatically be adjusted. Are you sure you want to start the timer?</string>
    <string name="warning">Warning</string>
    <string name="toast_not_enough_exercise_time">The currently selected exercise time is not sufficient to complete the chosen exercise set. The time has been adjusted.</string>
    <string name="pref_schedule_random_exercise">Use random exercise sets</string>
    <string name="dialog_evaluation_title">Evaluation</string>
</resources>